--- a/Public/.htaccess
+++ b/Public/.htaccess
@@ -1,12 +1,9 @@
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteBase /
+# public/.htaccess
+RewriteEngine On
 
-    # Serve existing files and directories directly
-    RewriteCond %{REQUEST_FILENAME} -f [OR]
-    RewriteCond %{REQUEST_FILENAME} -d
-    RewriteRule ^ - [L]
+# Allow direct access to existing files
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 
-    # Redirect all other requests to index.php (preserve path info)
-    RewriteRule ^(.*)$ index.php/$1 [L,QSA]
-</IfModule>
+# Redirect everything else to index.php
+RewriteRule ^(.*)$ index.php [QSA,L]
